CLI: Delete multiple slices & --force option
